--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ a:hover{
     flex-wrap: wrap;
 }
 .child1{
-    background-image: linear-gradient(180deg, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),url(jspider\ background\ pic.jpg);
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)),url(../images/bgimg.jpg);
     width: 390px;
     height: 350px;
     border-radius: 3px;
