--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
 *{
     margin: 0px;
 }
+nav{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background-color: white;
+    width: 100%;
+}
+.secdnav{
+    /* padding-top: 80px; */
+    margin-top: 100px;
+}
 .navlogo{
     width: 140px;
     height: 62px;
@@ -236,9 +247,17 @@ h6{
     justify-content: space-around;
     padding-bottom: 20px;
 }
-footer{
+.footer{
+    position: fixed;
+    top: 470px;
+    left: 0px;
+    width: 100%;
+    background-color: white;
     display: flex;
     justify-content: space-around;
-    padding: 30px 0px 20px 0px;
+    padding: 30px 0px 30px 0px;
     border-top: 1px solid rgb(233, 216, 216);
+}
+body{
+    padding-bottom: 80px;
 }
